dashboard/config: regenerate configs to expand COMEDI fuzzing
- Add comedi.yml fragment with all usb and manually configurable
legacy comedi drivers. Specify x86_64-only setting for drivers
that depend on CONFIG_ISA[_BUS].

- Set the comedi.comedi_num_legacy_minors=4 kernel config param.
That way there are always /dev/comediN devices to try
COMEDI_DEFCONFIG ioctl on.

- Enable comedi.yml fragment for most instances.
Disable it for ChromeOS and Android, as well as some other arches
to avoid conflicts.

This change will disable some already set COMEDI config options (like
COMEDI usb drivers) in a few instances. It should not adversely affect
overall coverage as most other instances will keep those options and
add more on top.

--- a/dashboard/config/linux/main.yml
+++ b/dashboard/config/linux/main.yml
@@ -67,6 +67,7 @@ includes:
  - bluetooth.yml: [-baseline, -onlynet, -onlyusb, -reduced, -s390]
  - wireless.yml: [-baseline, -onlynet, -onlyusb, -reduced, -s390]
  - hamradio.yml: [-baseline, -onlynet, -onlyusb, -reduced, -s390]
+ - comedi.yml: [-baseline, -onlynet, -onlyusb, -android, -chromeos, -s390, -arm64_emu]
  - usb.yml: [onlyusb]
  - lsm.yml: [lsm]
  - apparmor.yml: [apparmor]
