syz-cluster: support dashapi sender
Refactor the configuration to support both SMTP and dashapi-based email
sending functionality.

--- a/syz-cluster/overlays/minikube/global-config.yaml
+++ b/syz-cluster/overlays/minikube/global-config.yaml
@@ -14,7 +14,9 @@ data:
     emailReporting:
       name: test-name
       docs: http://docs/
-      sender: sender@email.com
+      sender: smtp
       supportEmail: name@email.com
       archiveList: archive@list.com
       moderationList: moderation@list.com
+      smtpConfig:
+        from: sender@email.com
