syz-cluster: move db-mgmt to tools
This will allows us to better organize the code.

--- a/syz-cluster/Makefile
+++ b/syz-cluster/Makefile
@@ -23,12 +23,12 @@ $(eval $(call build_image_rules,./controller,controller))
 $(eval $(call build_image_rules,./dashboard,web-dashboard))
 $(eval $(call build_image_rules,./reporter-server,reporter-server))
 $(eval $(call build_image_rules,./series-tracker,series-tracker))
-$(eval $(call build_image_rules,./db-mgmt,db-mgmt))
 $(eval $(call build_image_rules,./email-reporter,email-reporter))
 $(eval $(call build_image_rules,./workflow/triage-step,triage-step))
 $(eval $(call build_image_rules,./workflow/build-step,build-step))
 $(eval $(call build_image_rules,./workflow/fuzz-step,fuzz-step))
 $(eval $(call build_image_rules,./workflow/boot-step,boot-step))
+$(eval $(call build_image_rules,./tools/db-mgmt,db-mgmt))
 
 IMAGES := controller web-dashboard reporter-server series-tracker db-mgmt triage-step build-step boot-step fuzz-step
 BUILD_TARGETS := $(addprefix build-, $(IMAGES))
@@ -98,7 +98,7 @@ k8s-config-gke: ensure-spanner-database-uri-env ensure-blob-storage-env ensure-w
 	@kubectl kustomize ./overlays/gke/ | sed $(SED_EXPRESSIONS)
 
 migrate-job.yaml:
-	@cat db-mgmt/migrate-job.yaml | sed $(SED_EXPRESSIONS)
+	@cat tools/db-mgmt/migrate-job.yaml | sed $(SED_EXPRESSIONS)
 
 fetch-kernels-once.yaml:
 	@cat kernel-disk/fetch-kernels-once.yaml
