--- a/syz-cluster/tools/db-mgmt/Dockerfile
+++ b/syz-cluster/tools/db-mgmt/Dockerfile
@@ -9,9 +9,9 @@ RUN go mod download
 COPY pkg/gcs/ pkg/gcs/
 
 # Build the tool.
-COPY syz-cluster/db-mgmt/*.go syz-cluster/db-mgmt/
+COPY syz-cluster/tools/db-mgmt/*.go syz-cluster/tools/db-mgmt/
 COPY syz-cluster/pkg/ syz-cluster/pkg/
-RUN go build -o /bin/db-mgmt /build/syz-cluster/db-mgmt
+RUN go build -o /bin/db-mgmt /build/syz-cluster/tools/db-mgmt
 
 # Create the actual container.
 FROM alpine:latest
