syz-cluster: add a send-test-email tool
The tool will be used to test email reporter configuration.

--- a/syz-cluster/Makefile
+++ b/syz-cluster/Makefile
@@ -29,8 +29,9 @@ $(eval $(call build_image_rules,./workflow/build-step,build-step))
 $(eval $(call build_image_rules,./workflow/fuzz-step,fuzz-step))
 $(eval $(call build_image_rules,./workflow/boot-step,boot-step))
 $(eval $(call build_image_rules,./tools/db-mgmt,db-mgmt))
+$(eval $(call build_image_rules,./tools/send-test-email,send-test-email))
 
-IMAGES := controller web-dashboard reporter-server series-tracker db-mgmt triage-step build-step boot-step fuzz-step
+IMAGES := controller web-dashboard reporter-server series-tracker db-mgmt triage-step build-step boot-step fuzz-step send-test-email
 BUILD_TARGETS := $(addprefix build-, $(IMAGES))
 PUSH_TARGETS := $(addprefix push-, $(IMAGES))
 
@@ -99,6 +100,9 @@ k8s-config-gke: ensure-spanner-database-uri-env ensure-blob-storage-env ensure-w
 
 migrate-job.yaml:
 	@cat tools/db-mgmt/migrate-job.yaml | sed $(SED_EXPRESSIONS)
+
+send-test-email-job.yaml:
+	@cat tools/send-test-email/job.yaml | sed $(SED_EXPRESSIONS)
 
 fetch-kernels-once.yaml:
 	@cat kernel-disk/fetch-kernels-once.yaml
