syz-cluster: enable egress for pods that send emails

--- a/syz-cluster/overlays/common/kustomization.yaml
+++ b/syz-cluster/overlays/common/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - network-policy-controller.yaml
   - network-policy-git-access.yaml
   - network-policy-web-dashboard.yaml
+  - network-policy-email-sender.yaml
 
 patches:
   - target:
