--- a/syz-cluster/email-reporter/deployment.yaml
+++ b/syz-cluster/email-reporter/deployment.yaml
@@ -4,7 +4,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: email-reporter-deployment
+  name: email-reporter
 spec:
   replicas: 1
   selector:
