--- a/syz-cluster/overlays/gke/common/kustomization.yaml
+++ b/syz-cluster/overlays/gke/common/kustomization.yaml
@@ -2,8 +2,7 @@
 # Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.
 
 resources:
-  - ../common
-  - global-config.yaml
+  - ../../common
   - global-config-env.yaml
   - kernel-disk-pvc.yaml
   - workflow-artifacts.yaml
