--- a/syz-cluster/email-reporter/Dockerfile
+++ b/syz-cluster/email-reporter/Dockerfile
@@ -6,10 +6,9 @@ WORKDIR /build
 COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
-COPY pkg/auth/ pkg/auth/
-COPY pkg/gcs/ pkg/gcs/
-COPY pkg/gce/ pkg/gce/
-COPY pkg/email/ pkg/email/
+COPY pkg/ pkg/
+COPY prog/ prog/
+COPY sys/targets/ sys/targets/
 COPY dashboard/dashapi/ dashboard/dashapi/
 
 # Build the tool.
