syz-cluster: add reporter-server firewall policy
Enable access from email-reporter.

--- a/syz-cluster/overlays/common/kustomization.yaml
+++ b/syz-cluster/overlays/common/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
   - network-policy-git-access.yaml
   - network-policy-web-dashboard.yaml
   - network-policy-email-sender.yaml
+  - network-policy-reporter.yaml
 
 patches:
   - target:
