syz-cluster: generate web dashboard URLs for reports
Take web dashboard URL from the config and use it to generate links for
logs, reproducers, etc.

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -7,6 +7,7 @@ metadata:
   name: global-config
 data:
   config.yaml: |
+    URL: https://ci.syzbot.org
     parallelWorkflows: 7
     loreArchives:
       - netdev
