--- a/syz-cluster/overlays/gke/staging/global-config.yaml
+++ b/syz-cluster/overlays/gke/staging/global-config.yaml
@@ -7,6 +7,7 @@ metadata:
   name: global-config
 data:
   config.yaml: |
+    URL: http://unknown
     parallelWorkflows: 3
     loreArchives:
       - netdev
