--- a/syz-cluster/overlays/minikube/global-config.yaml
+++ b/syz-cluster/overlays/minikube/global-config.yaml
@@ -7,6 +7,7 @@ metadata:
   name: global-config
 data:
   config.yaml: |
+    URL: http://localhost
     parallelWorkflows: 1
     # Whatever, it's just for debugging.
     loreArchives:
