--- a/syz-cluster/reporter-server/deployment.yaml
+++ b/syz-cluster/reporter-server/deployment.yaml
@@ -22,6 +22,9 @@ spec:
         envFrom:
           - configMapRef:
               name: global-config-env
+        volumeMounts:
+          - name: config-volume
+            mountPath: /config
         ports:
         - containerPort: 8080
         resources:
@@ -31,3 +34,7 @@ spec:
           limits:
             cpu: 4
             memory: 16G
+      volumes:
+        - name: config-volume
+          configMap:
+            name: global-config
