syz-cluster: remember and share kernel tree URLs
Share not just the tree name (mainline, net, etc), but also the full URL
to check out the repository.

For that, add one more field to the Build entity and adjust email
reporting templates.

--- a/syz-cluster/workflow/rebuild-kernels-cron.yaml
+++ b/syz-cluster/workflow/rebuild-kernels-cron.yaml
@@ -86,6 +86,7 @@ spec:
           output = {
             "arch": "amd64", # TODO: consider others as well.
             "tree_name": input["name"],
+            "tree_url": input["URL"],
             "commit_hash": input["branch"],
             "config_name": input["kernel_config"]
           }
