--- a/dashboard/config/linux/stable-5.15-arm64-kasan.config
+++ b/dashboard/config/linux/stable-5.15-arm64-kasan.config
@@ -5,15 +5,15 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.15.165 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.6 (++20250514063057+1e4d39e07757-1~exp1~20250514183223.118)"
+CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.7 (++20250616065708+6146a88f6049-1~exp1~20250616065826.132)"
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
-CONFIG_CLANG_VERSION=200106
+CONFIG_CLANG_VERSION=200107
 CONFIG_AS_IS_LLVM=y
-CONFIG_AS_VERSION=200106
+CONFIG_AS_VERSION=200107
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
-CONFIG_LLD_VERSION=200106
+CONFIG_LLD_VERSION=200107
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
@@ -191,7 +191,7 @@ CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
-CONFIG_CGROUP_BPF=y
+# CONFIG_CGROUP_BPF is not set
 # CONFIG_CGROUP_MISC is not set
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_SOCK_CGROUP_DATA=y
@@ -1787,7 +1787,6 @@ CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-CONFIG_BPF_STREAM_PARSER=y
 CONFIG_NET_FLOW_LIMIT=y
 
 #
