--- a/dashboard/config/linux/upstream-leak-base.config
+++ b/dashboard/config/linux/upstream-leak-base.config
@@ -5,7 +5,7 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/x86_64 6.16.0-rc1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Debian 12.2.0-14) 12.2.0"
+CONFIG_CC_VERSION_TEXT="gcc (Debian 12.2.0-14+deb12u1) 12.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
