--- a/dashboard/config/linux/upstream-riscv64-kasan.config
+++ b/dashboard/config/linux/upstream-riscv64-kasan.config
@@ -1588,7 +1588,7 @@ CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-CONFIG_BPF_STREAM_PARSER=y
+# CONFIG_BPF_STREAM_PARSER is not set
 CONFIG_NET_FLOW_LIMIT=y
 
 #
