--- a/dashboard/config/linux/upstream-rust-kasan.config
+++ b/dashboard/config/linux/upstream-rust-kasan.config
@@ -5,15 +5,15 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/x86_64 6.16.0-rc1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.6 (++20250514063057+1e4d39e07757-1~exp1~20250514183223.118)"
+CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.7 (++20250616065708+6146a88f6049-1~exp1~20250616065826.132)"
 CONFIG_GCC_VERSION=0
 CONFIG_CC_IS_CLANG=y
-CONFIG_CLANG_VERSION=200106
+CONFIG_CLANG_VERSION=200107
 CONFIG_AS_IS_LLVM=y
-CONFIG_AS_VERSION=200106
+CONFIG_AS_VERSION=200107
 CONFIG_LD_VERSION=0
 CONFIG_LD_IS_LLD=y
-CONFIG_LLD_VERSION=200106
+CONFIG_LLD_VERSION=200107
 CONFIG_RUSTC_VERSION=108700
 CONFIG_RUST_IS_AVAILABLE=y
 CONFIG_RUSTC_LLVM_VERSION=200101
@@ -225,7 +225,7 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_PERF=y
-CONFIG_CGROUP_BPF=y
+# CONFIG_CGROUP_BPF is not set
 CONFIG_CGROUP_MISC=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_SOCK_CGROUP_DATA=y
@@ -307,7 +307,7 @@ CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
 CONFIG_RUST=y
 CONFIG_RUSTC_VERSION_TEXT="rustc 1.87.0 (17067e9ac 2025-05-09)"
-CONFIG_BINDGEN_VERSION_TEXT="bindgen 0.71.1"
+CONFIG_BINDGEN_VERSION_TEXT="bindgen 0.72.0"
 CONFIG_TRACEPOINTS=y
 
 #
@@ -1997,7 +1997,6 @@ CONFIG_CGROUP_NET_PRIO=y
 CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
-CONFIG_BPF_STREAM_PARSER=y
 CONFIG_NET_FLOW_LIMIT=y
 
 #
