syz-cluster: set kernel build directory in fuzz configs
These will allow pkg/cover work as intended.

--- a/syz-cluster/workflow/configs/all/base.cfg
+++ b/syz-cluster/workflow/configs/all/base.cfg
@@ -2,6 +2,7 @@
     "name": "base",
     "target": "linux/amd64",
     "kernel_obj": "/base/obj",
+    "kernel_build_src": "/workdir",
     "image": "/base/image",
     "syzkaller": "/syzkaller",
     "workdir": "/workdir",
