--- a/syz-cluster/workflow/configs/net/base.cfg
+++ b/syz-cluster/workflow/configs/net/base.cfg
@@ -2,6 +2,7 @@
     "name": "base",
     "target": "linux/amd64",
     "kernel_obj": "/base/obj",
+    "kernel_build_src": "/workdir",
     "image": "/base/image",
     "syzkaller": "/syzkaller",
     "workdir": "/workdir",
