--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -18,6 +18,7 @@ data:
       supportEmail: syzkaller@googlegroups.com
       archiveList: syzbot@lists.linux.dev
       moderationList: syzkaller-upstream-moderation@googlegroups.com
+      loreArchiveURL: https://lore.kernel.org/syzbot/0
       dashapiConfig:
         addr: https://syzkaller.appspot.com
         client: gke-email-reporter
