syz-cluster: configure a Cc list for reported bugs
Cc syzkaller-bugs@googlegroups.com in all upstreamed syzbot ci findings.

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -18,6 +18,8 @@ data:
       supportEmail: syzkaller@googlegroups.com
       archiveList: syzbot@lists.linux.dev
       moderationList: syzkaller-upstream-moderation@googlegroups.com
+      reportCc:
+        - syzkaller-bugs@googlegroups.com
       loreArchiveURL: https://lore.kernel.org/syzbot/0
       dashapiConfig:
         addr: https://syzkaller.appspot.com
