syz-cluster: ask to leave a credit tag
Update the email template to include a suggestion to add a Tested-By tag
to the affected series.

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -16,6 +16,7 @@ data:
       name: "syzbot ci"
       sender: dashapi
       supportEmail: syzkaller@googlegroups.com
+      creditEmail: syzbot@syzkaller.appspotmail.com
       archiveList: syzbot@lists.linux.dev
       moderationList: syzkaller-upstream-moderation@googlegroups.com
       reportCc:
