syz-cluster: add bpf tree info and configs
Fuzz bpf patches differently from net patches.

Monitor netfilter and bpf mailing lists

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -11,7 +11,9 @@ data:
     parallelWorkflows: 7
     loreArchives:
       - netdev
+      - bpf
       - linux-ext4
+      - netfilter-devel
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
