--- a/syz-cluster/pkg/workflow/template.yaml
+++ b/syz-cluster/pkg/workflow/template.yaml
@@ -38,7 +38,7 @@ spec:
               template: triage-step
         - - name: abort-on-skip-outcome
             template: exit-workflow
-            when: "{{=jsonpath(steps['run-triage'].outputs.parameters.result, '$.skip') != nil}}"
+            when: "{{=jsonpath(steps['run-triage'].outputs.parameters.result, '$.skip_reason') != ''}}"
         - - name: run-process-fuzz
             template: process-fuzz
             arguments:
