syz-cluster: don't keep kernel fetch jobs for too long
Set TTL for the workflow and the pods it creates.

--- a/syz-cluster/kernel-disk/fetch-kernels-template.yaml
+++ b/syz-cluster/kernel-disk/fetch-kernels-template.yaml
@@ -10,6 +10,11 @@ spec:
   podMetadata:
     labels:
       tier: workflow
+  podGC:
+    strategy: OnPodCompletion
+    deleteDelayDuration: 12h
+  ttlStrategy:
+    secondsAfterCompletion: 86400
   serviceAccountName: argo-executor-ksa
   templates:
     - name: main
