dashboard/config/linux: enable PREEMPT_RT in one config
To get coverage of PREEMPT_RT as well.
The disabled configs are marked as incompatible
with PREEMPT_RT in Kconfig files.

Fixes #6225

--- a/dashboard/config/linux/bits/lockdep.yml
+++ b/dashboard/config/linux/bits/lockdep.yml
@@ -23,7 +23,7 @@ config:
  - DEBUG_LOCK_ALLOC
  - DEBUG_RT_MUTEXES
  - DEBUG_SPINLOCK
- - DEBUG_MUTEXES
+ - DEBUG_MUTEXES: [-preempt_rt]
  - DEBUG_WW_MUTEX_SLOWPATH
- - DEBUG_RWSEMS: [v4.16]
+ - DEBUG_RWSEMS: [v4.16, -preempt_rt]
  - DEBUG_IRQFLAGS: [v5.12]
