--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -14,6 +14,7 @@ data:
       - bpf
       - linux-ext4
       - netfilter-devel
+      - kvm
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
