pkg/coveragedb: update file to subsystem info periodically
#6070 explains the problem of data propagation.
1. Add weekly /cron/update_coverdb_subsystems.
2. Stop updating subsystems from coverage receiver API.

--- a/dashboard/app/cron.yaml
+++ b/dashboard/app/cron.yaml
@@ -36,3 +36,6 @@ cron:
 # We use 15 for convenience here.
 - url: /cron/email_coverage_reports
   schedule: 15 of month 00:00
+# Weekly update the kernel-file -> subsystems relationship
+- url: /cron/update_coverdb_subsystems
+  schedule: every monday
