syz-cluster: fuzz io-uring patch series
Use a custom set of enabled syscalls.

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -15,6 +15,7 @@ data:
       - linux-ext4
       - netfilter-devel
       - kvm
+      - io-uring
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
