syz-cluster: fuzz linux-wireless patch series

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -16,6 +16,7 @@ data:
       - netfilter-devel
       - kvm
       - io-uring
+      - linux-wireless
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
