syz-cluster: configure GC rules for rebuild-kernels-cron.yaml

--- a/syz-cluster/workflow/rebuild-kernels-cron.yaml
+++ b/syz-cluster/workflow/rebuild-kernels-cron.yaml
@@ -20,6 +20,11 @@ spec:
     podMetadata:
       labels:
         tier: workflow
+    podGC:
+      strategy: OnPodCompletion
+      deleteDelayDuration: 12h
+    ttlStrategy:
+      secondsAfterCompletion: 86400
     templates:
     - name: main
       parallelism: 1
