dashboard/config/linux: always enable GVNIC

--- a/dashboard/config/linux/android-5.10-base.config
+++ b/dashboard/config/linux/android-5.10-base.config
@@ -2101,7 +2101,7 @@ CONFIG_NET_VENDOR_EMULEX=y
 CONFIG_NET_VENDOR_EZCHIP=y
 # CONFIG_EZCHIP_NPS_MANAGEMENT_ENET is not set
 CONFIG_NET_VENDOR_GOOGLE=y
-# CONFIG_GVE is not set
+CONFIG_GVE=y
 CONFIG_NET_VENDOR_HUAWEI=y
 # CONFIG_HINIC is not set
 CONFIG_NET_VENDOR_I825XX=y
