--- a/dashboard/config/linux/android-5.4.config
+++ b/dashboard/config/linux/android-5.4.config
@@ -1989,7 +1989,8 @@ CONFIG_ETHERNET=y
 # CONFIG_NET_VENDOR_DLINK is not set
 # CONFIG_NET_VENDOR_EMULEX is not set
 # CONFIG_NET_VENDOR_EZCHIP is not set
-# CONFIG_NET_VENDOR_GOOGLE is not set
+CONFIG_NET_VENDOR_GOOGLE=y
+CONFIG_GVE=y
 # CONFIG_NET_VENDOR_HP is not set
 # CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_I825XX is not set
