--- a/dashboard/config/linux/bits/base.yml
+++ b/dashboard/config/linux/bits/base.yml
@@ -187,6 +187,9 @@ config:
  # More debugging info is always good.
  - NMI_CHECK_CPU: [x86_64, v6.3]
 
+ # We use GVNIC on Google Cloud.
+ - GVE: [-arm, -riscv, -s390, -timeouts_emu]
+
  # If syzkaller gets to /dev/{mem,kmem,ioport}, it will destroy the machine.
  # It managed to do so with some mount's, chdir's and bogus file names.
  # These are not needed for fuzzing, so completely disabling them is
