--- a/dashboard/config/linux/stable-5.15-arm64-kasan-base.config
+++ b/dashboard/config/linux/stable-5.15-arm64-kasan-base.config
@@ -2507,7 +2507,7 @@ CONFIG_FSL_ENETC_MDIO=y
 CONFIG_FSL_ENETC_PTP_CLOCK=y
 CONFIG_FSL_ENETC_QOS=y
 CONFIG_NET_VENDOR_GOOGLE=y
-# CONFIG_GVE is not set
+CONFIG_GVE=y
 CONFIG_NET_VENDOR_HISILICON=y
 CONFIG_HIX5HD2_GMAC=y
 # CONFIG_HISI_FEMAC is not set
