--- a/dashboard/config/linux/upstream-arm64-mte.config
+++ b/dashboard/config/linux/upstream-arm64-mte.config
@@ -2800,7 +2800,7 @@ CONFIG_NET_VENDOR_ENGLEDER=y
 CONFIG_NET_VENDOR_FUNGIBLE=y
 # CONFIG_FUN_ETH is not set
 CONFIG_NET_VENDOR_GOOGLE=y
-CONFIG_GVE=y
+# CONFIG_GVE is not set
 CONFIG_NET_VENDOR_HISILICON=y
 CONFIG_HIX5HD2_GMAC=y
 # CONFIG_HISI_FEMAC is not set
