--- a/dashboard/config/linux/upstream-usb.config
+++ b/dashboard/config/linux/upstream-usb.config
@@ -2258,7 +2258,7 @@ CONFIG_NET_VENDOR_FUJITSU=y
 CONFIG_NET_VENDOR_FUNGIBLE=y
 # CONFIG_FUN_ETH is not set
 CONFIG_NET_VENDOR_GOOGLE=y
-# CONFIG_GVE is not set
+CONFIG_GVE=y
 CONFIG_NET_VENDOR_HISILICON=y
 # CONFIG_HIBMCGE is not set
 CONFIG_NET_VENDOR_HUAWEI=y
