--- a/dashboard/config/linux/upstream-arm64-full-base.config
+++ b/dashboard/config/linux/upstream-arm64-full-base.config
@@ -2840,7 +2840,7 @@ CONFIG_FSL_ENETC_QOS=y
 CONFIG_NET_VENDOR_FUNGIBLE=y
 # CONFIG_FUN_ETH is not set
 CONFIG_NET_VENDOR_GOOGLE=y
-# CONFIG_GVE is not set
+CONFIG_GVE=y
 CONFIG_NET_VENDOR_HISILICON=y
 CONFIG_HIX5HD2_GMAC=y
 # CONFIG_HISI_FEMAC is not set
