--- a/dashboard/config/linux/upstream-usb-base.config
+++ b/dashboard/config/linux/upstream-usb-base.config
@@ -1081,6 +1081,7 @@ CONFIG_NET_INGRESS=y
 CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
 CONFIG_SKB_EXTENSIONS=y
+CONFIG_NET_DEVMEM=y
 
 #
 # Networking options
@@ -1430,6 +1431,8 @@ CONFIG_NET_9P_VIRTIO=y
 CONFIG_DST_CACHE=y
 CONFIG_GRO_CELLS=y
 CONFIG_NET_SELFTESTS=y
+CONFIG_PAGE_POOL=y
+# CONFIG_PAGE_POOL_STATS is not set
 CONFIG_FAILOVER=y
 CONFIG_ETHTOOL_NETLINK=y
 
@@ -2063,7 +2066,7 @@ CONFIG_NET_VENDOR_EZCHIP=y
 CONFIG_NET_VENDOR_FUNGIBLE=y
 # CONFIG_FUN_ETH is not set
 CONFIG_NET_VENDOR_GOOGLE=y
-# CONFIG_GVE is not set
+CONFIG_GVE=y
 CONFIG_NET_VENDOR_HISILICON=y
 # CONFIG_HIBMCGE is not set
 CONFIG_NET_VENDOR_HUAWEI=y
@@ -5130,6 +5133,8 @@ CONFIG_ARCH_USE_MEMTEST=y
 #
 # end of Rust hacking
 # end of Kernel hacking
+
+CONFIG_IO_URING_ZCRX=y
 
 CONFIG_DEBUG_MEMORY=y
 CONFIG_TWIST_KERNEL_BEHAVIOR=y
