syz-cluster: fuzz block patch series

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -19,6 +19,7 @@ data:
       - linux-wireless
       - linux-mm
       - linux-unionfs
+      - linux-block
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
