syz-cluster: add ptp syscalls to net config
The ptp series go to the netdev list.

--- a/syz-cluster/workflow/configs/net/base.cfg
+++ b/syz-cluster/workflow/configs/net/base.cfg
@@ -23,7 +23,8 @@
 	    "clock_gettime", "bpf", "openat$tun", "openat$ppp",
 	    "syz_open_procfs$namespace", "syz_80211_*", "nanosleep",
 	    "openat$nci", "ioctl$IOCTL_GET_NCIDEV_IDX", "openat$rfkill",
-	    "openat$6lowpan*", "openat$pidfd", "openat$tcp*", "openat$vhost_vsock"
+	    "openat$6lowpan*", "openat$pidfd", "openat$tcp*", "openat$vhost_vsock",
+	    "openat$ptp*", "ioctl$PTP*"
     ],
     "procs": 3,
     "sandbox": "none",
