syz-cluster: support multiple fuzz tasks
Adjut the workflow template and the API to run multiple fuzzing
campaigns as a part of single patch series processing.

--- a/syz-cluster/pkg/workflow/template.yaml
+++ b/syz-cluster/pkg/workflow/template.yaml
@@ -44,7 +44,8 @@ spec:
             arguments:
               parameters:
                 - name: element
-                  value: "{{=jsonpath(steps['run-triage'].outputs.parameters.result, '$.fuzz')}}"
+                  value: "{{item}}"
+            withParam: "{{=jsonpath(steps['run-triage'].outputs.parameters.result, '$.fuzz')}}"
             continueOn:
               failed: true
     - name: process-fuzz
